--- a/C+++/Classes/Snippet/CDSnippetPopoperViewController.xib
+++ b/C+++/Classes/Snippet/CDSnippetPopoperViewController.xib
@@ -9,6 +9,8 @@
         <customObject id="-2" userLabel="File's Owner" customClass="CDSnippetPopoperViewController" customModule="C___" customModuleProvider="target">
             <connections>
                 <outlet property="addToCodeButton" destination="MlQ-AU-NIG" id="jSi-EN-BTR"/>
+                <outlet property="completionTextField" destination="74a-1V-x1L" id="oIL-z0-quk"/>
+                <outlet property="editButton" destination="E4R-d7-tFf" id="srM-OM-ujx"/>
                 <outlet property="imageView" destination="nkU-dH-6NV" id="Cod-ol-F5e"/>
                 <outlet property="textView" destination="heX-fl-BNu" id="Fpp-zb-IxP"/>
                 <outlet property="titleLabel" destination="vfl-J8-3TD" id="wuw-Sv-BbC"/>
@@ -22,7 +24,7 @@
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
             <subviews>
                 <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="vfl-J8-3TD">
-                    <rect key="frame" x="47" y="239" width="242" height="26"/>
+                    <rect key="frame" x="47" y="239" width="188" height="26"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                     <textFieldCell key="cell" lineBreakMode="clipping" title="Title" id="gKZ-Kv-ZO4">
                         <font key="font" metaFont="systemBold" size="22"/>
@@ -30,19 +32,6 @@
                         <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
                     </textFieldCell>
                 </textField>
-                <customView translatesAutoresizingMaskIntoConstraints="NO" id="heX-fl-BNu" customClass="SKSyntaxTextView" customModule="C___" customModuleProvider="target">
-                    <rect key="frame" x="12" y="53" width="275" height="179"/>
-                </customView>
-                <button verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="MlQ-AU-NIG">
-                    <rect key="frame" x="198" y="18" width="90" height="23"/>
-                    <buttonCell key="cell" type="roundTextured" title="Add to code" bezelStyle="texturedRounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="uvw-T4-kEX">
-                        <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
-                        <font key="font" metaFont="system"/>
-                    </buttonCell>
-                    <connections>
-                        <action selector="addToCode:" target="-2" id="aCD-0P-njN"/>
-                    </connections>
-                </button>
                 <button translatesAutoresizingMaskIntoConstraints="NO" id="nkU-dH-6NV">
                     <rect key="frame" x="13" y="239" width="28" height="28"/>
                     <constraints>
@@ -57,21 +46,83 @@
                         <action selector="changeImage:" target="-2" id="XyA-gs-50x"/>
                     </connections>
                 </button>
+                <customView translatesAutoresizingMaskIntoConstraints="NO" id="heX-fl-BNu" customClass="SKSyntaxTextView" customModule="C___" customModuleProvider="target">
+                    <rect key="frame" x="12" y="66" width="275" height="164"/>
+                    <constraints>
+                        <constraint firstAttribute="width" constant="275" id="gkT-kY-ClW"/>
+                    </constraints>
+                </customView>
+                <button verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="MlQ-AU-NIG">
+                    <rect key="frame" x="198" y="9" width="90" height="23"/>
+                    <buttonCell key="cell" type="roundTextured" title="Add to code" bezelStyle="texturedRounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="uvw-T4-kEX">
+                        <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
+                        <font key="font" metaFont="system"/>
+                    </buttonCell>
+                    <connections>
+                        <action selector="addToCode:" target="-2" id="aCD-0P-njN"/>
+                    </connections>
+                </button>
+                <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="10U-cR-1u1">
+                    <rect key="frame" x="12" y="41" width="74" height="16"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="16" id="0ut-3C-k6g"/>
+                        <constraint firstAttribute="width" constant="70" id="Rrx-EQ-b4N"/>
+                    </constraints>
+                    <textFieldCell key="cell" lineBreakMode="clipping" title="Completion" id="lYF-E5-KGl">
+                        <font key="font" metaFont="system"/>
+                        <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
+                        <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
+                    </textFieldCell>
+                </textField>
+                <textField verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="74a-1V-x1L">
+                    <rect key="frame" x="92" y="36" width="197" height="21"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="21" id="Q9k-Ny-gke"/>
+                        <constraint firstAttribute="width" constant="193" id="xgD-Hz-ewa"/>
+                    </constraints>
+                    <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" selectable="YES" sendsActionOnEndEditing="YES" placeholderString="None" id="XXH-RX-cmh">
+                        <font key="font" metaFont="system"/>
+                        <color key="textColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
+                        <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
+                    </textFieldCell>
+                </textField>
+                <button verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="E4R-d7-tFf">
+                    <rect key="frame" x="228" y="240" width="60" height="26"/>
+                    <constraints>
+                        <constraint firstAttribute="width" constant="59.5" id="4Co-4c-4AL"/>
+                        <constraint firstAttribute="height" constant="20" id="mKk-yG-piw"/>
+                    </constraints>
+                    <buttonCell key="cell" type="bevel" title="Done" bezelStyle="rounded" image="NSTouchBarComposeTemplate" imagePosition="only" alignment="center" lineBreakMode="truncatingTail" state="on" imageScaling="proportionallyDown" inset="2" id="vtY-Ln-Ic5">
+                        <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
+                        <font key="font" metaFont="system"/>
+                    </buttonCell>
+                    <connections>
+                        <action selector="editOrDone:" target="-2" id="Mt6-Kb-1kb"/>
+                    </connections>
+                </button>
             </subviews>
             <constraints>
-                <constraint firstItem="heX-fl-BNu" firstAttribute="top" secondItem="nkU-dH-6NV" secondAttribute="bottom" constant="7" id="Alx-Rz-BZo"/>
+                <constraint firstAttribute="trailing" secondItem="74a-1V-x1L" secondAttribute="trailing" constant="11" id="0Mb-2V-D3u"/>
+                <constraint firstItem="74a-1V-x1L" firstAttribute="top" secondItem="heX-fl-BNu" secondAttribute="bottom" constant="9" id="33s-Ys-xsl"/>
+                <constraint firstAttribute="trailing" secondItem="E4R-d7-tFf" secondAttribute="trailing" constant="11" id="8Wu-wc-WHw"/>
+                <constraint firstItem="E4R-d7-tFf" firstAttribute="top" secondItem="Hz6-mo-xeY" secondAttribute="top" constant="15.5" id="8pe-5m-uOC"/>
+                <constraint firstItem="74a-1V-x1L" firstAttribute="leading" secondItem="10U-cR-1u1" secondAttribute="trailing" constant="10" id="AYt-ZN-bbv"/>
+                <constraint firstItem="heX-fl-BNu" firstAttribute="top" secondItem="nkU-dH-6NV" secondAttribute="bottom" constant="9" id="Alx-Rz-BZo"/>
                 <constraint firstItem="MlQ-AU-NIG" firstAttribute="leading" secondItem="Hz6-mo-xeY" secondAttribute="leading" constant="199" id="Bp9-tI-PNH"/>
+                <constraint firstItem="10U-cR-1u1" firstAttribute="top" secondItem="heX-fl-BNu" secondAttribute="bottom" constant="9" id="CaL-r6-oSU"/>
                 <constraint firstAttribute="trailing" secondItem="heX-fl-BNu" secondAttribute="trailing" constant="11" id="JEY-8H-JdH"/>
                 <constraint firstItem="heX-fl-BNu" firstAttribute="leading" secondItem="Hz6-mo-xeY" secondAttribute="leading" constant="12" id="L40-v9-tmK"/>
                 <constraint firstItem="nkU-dH-6NV" firstAttribute="leading" secondItem="Hz6-mo-xeY" secondAttribute="leading" constant="13" id="bo5-EY-lww"/>
                 <constraint firstItem="nkU-dH-6NV" firstAttribute="top" secondItem="Hz6-mo-xeY" secondAttribute="top" constant="11" id="eHL-al-0JI"/>
-                <constraint firstItem="MlQ-AU-NIG" firstAttribute="top" secondItem="heX-fl-BNu" secondAttribute="bottom" constant="13" id="hIj-Pl-6GB"/>
-                <constraint firstAttribute="bottom" secondItem="MlQ-AU-NIG" secondAttribute="bottom" constant="20" id="pFv-xU-wjl"/>
+                <constraint firstItem="MlQ-AU-NIG" firstAttribute="top" secondItem="heX-fl-BNu" secondAttribute="bottom" constant="35" id="hIj-Pl-6GB"/>
+                <constraint firstItem="10U-cR-1u1" firstAttribute="leading" secondItem="Hz6-mo-xeY" secondAttribute="leading" constant="14" id="omf-df-RRG"/>
+                <constraint firstAttribute="bottom" secondItem="MlQ-AU-NIG" secondAttribute="bottom" constant="11" id="pFv-xU-wjl"/>
             </constraints>
             <point key="canvasLocation" x="48" y="157"/>
         </customView>
     </objects>
     <resources>
         <image name="Code" width="512" height="512"/>
+        <image name="NSTouchBarComposeTemplate" width="17" height="15"/>
     </resources>
 </document>
