--- a/C+++/Classes/Settings/Preferences.storyboard
+++ b/C+++/Classes/Settings/Preferences.storyboard
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.Storyboard.XIB" version="3.0" toolsVersion="17506" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES">
+<document type="com.apple.InterfaceBuilder3.Cocoa.Storyboard.XIB" version="3.0" toolsVersion="17701" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES">
     <dependencies>
         <deployment identifier="macosx"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="17506"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="17701"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -10,7 +10,7 @@
         <scene sceneID="aYM-YA-r6Q">
             <objects>
                 <windowController storyboardIdentifier="Preferences" showSeguePresentationStyle="single" id="XmC-pB-oE6" sceneMemberID="viewController">
-                    <window key="window" title="Preferences" allowsToolTipsWhenApplicationIsInactive="NO" autorecalculatesKeyViewLoop="NO" hasShadow="NO" releasedWhenClosed="NO" visibleAtLaunch="NO" frameAutosaveName="" animationBehavior="default" tabbingMode="disallowed" titlebarAppearsTransparent="YES" toolbarStyle="preference" id="pyQ-Gt-1Ht">
+                    <window key="window" title="Preferences" subtitle="C+++" allowsToolTipsWhenApplicationIsInactive="NO" autorecalculatesKeyViewLoop="NO" releasedWhenClosed="NO" visibleAtLaunch="NO" frameAutosaveName="" animationBehavior="default" tabbingMode="disallowed" titlebarAppearsTransparent="YES" toolbarStyle="preference" id="pyQ-Gt-1Ht">
                         <windowStyleMask key="styleMask" titled="YES" closable="YES"/>
                         <windowPositionMask key="initialPositionMask" leftStrut="YES" rightStrut="YES" topStrut="YES" bottomStrut="YES"/>
                         <rect key="contentRect" x="196" y="249" width="480" height="270"/>
@@ -100,7 +100,7 @@
                                                     <rect key="frame" x="0.0" y="0.0" width="218" height="234"/>
                                                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                                     <size key="intercellSpacing" width="17" height="5"/>
-                                                    <color key="backgroundColor" name="controlBackgroundColor" catalog="System" colorSpace="catalog"/>
+                                                    <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                                     <color key="gridColor" name="gridColor" catalog="System" colorSpace="catalog"/>
                                                     <tableColumns>
                                                         <tableColumn width="186" minWidth="40" maxWidth="1000" id="CX6-aB-Ycs">
@@ -178,7 +178,7 @@
                                                     <rect key="frame" x="0.0" y="0.0" width="218" height="234"/>
                                                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                                     <size key="intercellSpacing" width="17" height="5"/>
-                                                    <color key="backgroundColor" name="controlBackgroundColor" catalog="System" colorSpace="catalog"/>
+                                                    <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                                     <color key="gridColor" name="gridColor" catalog="System" colorSpace="catalog"/>
                                                     <tableColumns>
                                                         <tableColumn width="186" minWidth="40" maxWidth="1000" id="eqE-ac-eMp">
@@ -410,11 +410,11 @@
             <objects>
                 <viewController title="Editor" id="tfD-Ol-1eX" customClass="CDEditorPreferencesViewController" customModule="C___" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" id="KWj-vr-i0p">
-                        <rect key="frame" x="0.0" y="0.0" width="450" height="294"/>
+                        <rect key="frame" x="0.0" y="0.0" width="450" height="379"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <subviews>
                             <box title="Code Editing Options" translatesAutoresizingMaskIntoConstraints="NO" id="gd9-p0-irw">
-                                <rect key="frame" x="35" y="16" width="381" height="183"/>
+                                <rect key="frame" x="35" y="96" width="381" height="183"/>
                                 <view key="contentView" id="hZO-8F-2FX">
                                     <rect key="frame" x="3" y="3" width="375" height="165"/>
                                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -487,7 +487,7 @@
                                 </constraints>
                             </box>
                             <box title="Font Options" translatesAutoresizingMaskIntoConstraints="NO" id="dv4-pH-LIZ">
-                                <rect key="frame" x="35" y="206" width="381" height="74"/>
+                                <rect key="frame" x="35" y="285" width="381" height="74"/>
                                 <view key="contentView" id="K3U-H7-B77">
                                     <rect key="frame" x="3" y="3" width="375" height="56"/>
                                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -519,18 +519,78 @@
                                     <constraint firstAttribute="width" constant="375" id="oMU-7G-pde"/>
                                 </constraints>
                             </box>
+                            <box title="Astyle Options" translatesAutoresizingMaskIntoConstraints="NO" id="b5g-cb-zmn">
+                                <rect key="frame" x="35" y="16" width="381" height="74"/>
+                                <view key="contentView" id="QiI-1F-UZs">
+                                    <rect key="frame" x="3" y="3" width="375" height="56"/>
+                                    <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                    <subviews>
+                                        <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="jx7-dW-xRM">
+                                            <rect key="frame" x="8" y="33" width="44" height="16"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="16" id="6Ew-dP-cb9"/>
+                                                <constraint firstAttribute="width" constant="40" id="z75-es-Wff"/>
+                                            </constraints>
+                                            <textFieldCell key="cell" lineBreakMode="clipping" title="astyle " id="F3I-zt-8BD">
+                                                <font key="font" usesAppearanceFont="YES"/>
+                                                <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
+                                                <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
+                                            </textFieldCell>
+                                        </textField>
+                                        <textField verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="QsX-ds-wMJ">
+                                            <rect key="frame" x="53" y="30" width="314" height="21"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="21" id="avJ-h2-60S"/>
+                                                <constraint firstAttribute="width" constant="314" id="x3D-Mt-i2d"/>
+                                            </constraints>
+                                            <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" selectable="YES" editable="YES" sendsActionOnEndEditing="YES" borderStyle="bezel" placeholderString="arguments, separated by a single space" drawsBackground="YES" id="xPS-ru-zaa">
+                                                <font key="font" metaFont="system"/>
+                                                <color key="textColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
+                                                <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
+                                            </textFieldCell>
+                                            <connections>
+                                                <outlet property="delegate" destination="tfD-Ol-1eX" id="hmo-4u-RVi"/>
+                                            </connections>
+                                        </textField>
+                                        <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="T0v-Qv-xPI">
+                                            <rect key="frame" x="8" y="9" width="223" height="16"/>
+                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
+                                            <textFieldCell key="cell" lineBreakMode="clipping" selectable="YES" title="View Astyle documentation for help." allowsEditingTextAttributes="YES" id="rkx-Wc-KmP">
+                                                <font key="font" metaFont="system"/>
+                                                <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
+                                                <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
+                                            </textFieldCell>
+                                        </textField>
+                                    </subviews>
+                                    <constraints>
+                                        <constraint firstAttribute="trailing" secondItem="QsX-ds-wMJ" secondAttribute="trailing" constant="8" id="6Ff-PK-aFU"/>
+                                        <constraint firstItem="jx7-dW-xRM" firstAttribute="leading" secondItem="QiI-1F-UZs" secondAttribute="leading" constant="10" id="JbW-86-6FH"/>
+                                        <constraint firstItem="QsX-ds-wMJ" firstAttribute="top" secondItem="QiI-1F-UZs" secondAttribute="top" constant="5" id="htC-EB-7Y4"/>
+                                        <constraint firstItem="jx7-dW-xRM" firstAttribute="top" secondItem="QiI-1F-UZs" secondAttribute="top" constant="7" id="mUv-JG-NRn"/>
+                                        <constraint firstItem="QsX-ds-wMJ" firstAttribute="leading" secondItem="jx7-dW-xRM" secondAttribute="trailing" constant="3" id="xd9-4c-lu1"/>
+                                    </constraints>
+                                </view>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="375" id="eVV-zQ-lNC"/>
+                                    <constraint firstAttribute="height" constant="70" id="x2V-GX-5rW"/>
+                                </constraints>
+                            </box>
                         </subviews>
                         <constraints>
                             <constraint firstItem="gd9-p0-irw" firstAttribute="leading" secondItem="KWj-vr-i0p" secondAttribute="leading" constant="38" id="30H-no-IYf"/>
-                            <constraint firstItem="gd9-p0-irw" firstAttribute="top" secondItem="KWj-vr-i0p" secondAttribute="top" constant="95" id="318-t2-pby"/>
+                            <constraint firstItem="gd9-p0-irw" firstAttribute="top" secondItem="dv4-pH-LIZ" secondAttribute="bottom" constant="10" id="5Iw-ny-DXc"/>
+                            <constraint firstItem="b5g-cb-zmn" firstAttribute="top" secondItem="gd9-p0-irw" secondAttribute="bottom" constant="10" id="ANs-qW-vXK"/>
+                            <constraint firstItem="b5g-cb-zmn" firstAttribute="leading" secondItem="KWj-vr-i0p" secondAttribute="leading" constant="38" id="Wvl-wr-KgE"/>
                             <constraint firstItem="dv4-pH-LIZ" firstAttribute="leading" secondItem="KWj-vr-i0p" secondAttribute="leading" constant="38" id="aKO-VC-SRK"/>
-                            <constraint firstAttribute="bottom" secondItem="gd9-p0-irw" secondAttribute="bottom" constant="20" id="gmK-EC-08c"/>
+                            <constraint firstItem="dv4-pH-LIZ" firstAttribute="top" secondItem="KWj-vr-i0p" secondAttribute="top" constant="20" symbolic="YES" id="cVg-eV-AuF"/>
                             <constraint firstAttribute="trailing" secondItem="gd9-p0-irw" secondAttribute="trailing" constant="37" id="ioD-Ye-Uy3"/>
                             <constraint firstAttribute="trailing" secondItem="dv4-pH-LIZ" secondAttribute="trailing" constant="37" id="o6P-0Q-z82"/>
-                            <constraint firstItem="dv4-pH-LIZ" firstAttribute="top" secondItem="KWj-vr-i0p" secondAttribute="top" constant="14" id="sSW-P6-JPU"/>
+                            <constraint firstAttribute="bottom" secondItem="b5g-cb-zmn" secondAttribute="bottom" constant="20" id="wyd-US-CgD"/>
                         </constraints>
                     </view>
                     <connections>
+                        <outlet property="astyleHelpLabel" destination="T0v-Qv-xPI" id="rTt-pQ-ryp"/>
+                        <outlet property="astyleOptions" destination="QsX-ds-wMJ" id="oR4-pj-4CX"/>
                         <outlet property="autoComplete" destination="stZ-hI-2GH" id="juu-be-fXQ"/>
                         <outlet property="displaysTooltip" destination="Y02-SS-QE4" id="wkN-Kj-dYK"/>
                         <outlet property="fontNameLabel" destination="MmC-WZ-W3n" id="SMa-CD-PhH"/>
@@ -539,7 +599,7 @@
                 </viewController>
                 <customObject id="Ate-nw-Psy" userLabel="First Responder" customClass="NSResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="504" y="771"/>
+            <point key="canvasLocation" x="504" y="818.5"/>
         </scene>
     </scenes>
     <resources>
